corrected head overflow issue

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -71,6 +71,7 @@ li {
 
 /*-------------------------------------intro*/
 #intro {
+  position: relative;
   height: 42rem;
   color: #fff;
   display: flex;
@@ -78,6 +79,7 @@ li {
   justify-content: center;
   margin-bottom: -1rem;
   font-size: 6rem;
+  overflow: hidden;
 }
 
 #introtxt {
@@ -112,7 +114,6 @@ li {
   left: 0;
   width: 100%;
   height: 105vh;
-  overflow: hidden;
   z-index: -1;
 }
 
@@ -578,16 +579,8 @@ footer ul li:nth-child(2) {
     font-size: 4rem;
   }
 
-  #fullscreen-wrap {
-    height: 81%;
-  }
-
   #skills {
     height: 60rem;
-  }
-
-  #projects {
-    padding-top:
   }
 
   .probox {
